# Mycelium

./: CMakeLists.txt  LICENCE  README.md  pulautin.xml
include/: CIE1931.hpp  CMakeLists.txt  Clock.hpp  MathTypes.hpp  Morton.hpp  MultiArray.hpp  Spectrum.hpp  TypeUtils.hpp  Types.hpp
src/: CIE1931.cpp  CMakeLists.txt  Clock.cpp  Spectrum.cpp  main.cpp
